assets/scss/content/_look-book.scss
.look-book {
	background-color: $color-grey;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: flex-start;

	
	
	&__item {
		display: flex;
		margin: 0 auto;
		width: 100%;

		img, video {
			display: block;
			width: 100%;
			max-width: 100%;
			height: auto;
		}	
	}
}

